# tipu

./: Cargo.toml  README.md  package.json
src/: main.rs  parse.rs
src/components/: app.rs  git_window.rs  mod.rs  script_bar.rs  shared_window.rs  terminal.rs
src/state/: state.rs
src/util/: app.rs  mod.rs  parse.rs
