[package]
name = "tipu"
version = "0.1.0"
authors = ["aryaminus <sunim.54@gmail.com>", "GauravRajSharma <blazegaurav123@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
tuikit = "*"
serde_json = "*"
tui = "0.10"
termion = "1.0.0"
lazy_static = "1.4.0"
unicode-segmentation = "1.6.0"
serde = { version = "1.0", features = ["derive"] }